// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appsForUserTypeAndGroups doesn’t return agency apps if none is specified 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/lighthouse_basic_icon.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Beacon",
        "url": "https://test-beacon.boston.gov/cob",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/city_workforce_emergency_alerts.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Workforce Alerts",
        "url": "https://alertbostontraining.genasys.com/saml2/authenticate/abtraining",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/talented.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "BPS Job Listings",
        "url": "https://bostonpublicschools.tedk12.com/hire/index.aspx",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/boston-maps.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "https://assets.boston.gov/icons/accessboston/identitysecuritycloud.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "ISC",
        "url": "https://cityofboston-sb.identitynow.com/login/login/?brand=default",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Update Chosen Name",
        "url": "/preferred-chosen-name",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "target": "",
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-test/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Settings",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": Array [
          "BPHC",
        ],
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Fleet Hub",
        "url": "https://beacon.boston.gov/cob?id=kb_article&sysparm_article=KB0010114",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps for a group 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/lighthouse_basic_icon.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Beacon",
        "url": "https://test-beacon.boston.gov/cob",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/city_workforce_emergency_alerts.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Workforce Alerts",
        "url": "https://alertbostontraining.genasys.com/saml2/authenticate/abtraining",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/talented.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "BPS Job Listings",
        "url": "https://bostonpublicschools.tedk12.com/hire/index.aspx",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/boston-maps.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "https://assets.boston.gov/icons/accessboston/identitysecuritycloud.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "ISC",
        "url": "https://cityofboston-sb.identitynow.com/login/login/?brand=default",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Update Chosen Name",
        "url": "/preferred-chosen-name",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "target": "",
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-test/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Settings",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "BPDA",
          "BPD",
          "BFD",
          "CH",
        ],
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "BPDA",
          "CH",
          "ASSESSING",
          "BPL",
        ],
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": Array [
          "SG_AB_BLDGMAINTREQ",
        ],
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": Array [
          "BPHC",
        ],
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Fleet Hub",
        "url": "https://beacon.boston.gov/cob?id=kb_article&sysparm_article=KB0010114",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps for an agency 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/lighthouse_basic_icon.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Beacon",
        "url": "https://test-beacon.boston.gov/cob",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/city_workforce_emergency_alerts.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Workforce Alerts",
        "url": "https://alertbostontraining.genasys.com/saml2/authenticate/abtraining",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/talented.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "BPS Job Listings",
        "url": "https://bostonpublicschools.tedk12.com/hire/index.aspx",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/boston-maps.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": Array [
          "SG_AB_IAM_TEAM",
        ],
        "iconUrl": "https://assets.boston.gov/icons/accessboston/identitysecuritycloud.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "ISC",
        "url": "https://cityofboston-sb.identitynow.com/login/login/?brand=default",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Update Chosen Name",
        "url": "/preferred-chosen-name",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "target": "",
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-test/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Settings",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": Array [
          "BPHC",
        ],
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Fleet Hub",
        "url": "https://beacon.boston.gov/cob?id=kb_article&sysparm_article=KB0010114",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns apps that require an MFA device 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/lighthouse_basic_icon.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Beacon",
        "url": "https://test-beacon.boston.gov/cob",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/city_workforce_emergency_alerts.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Workforce Alerts",
        "url": "https://alertbostontraining.genasys.com/saml2/authenticate/abtraining",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/talented.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "BPS Job Listings",
        "url": "https://bostonpublicschools.tedk12.com/hire/index.aspx",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/boston-maps.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Update Chosen Name",
        "url": "/preferred-chosen-name",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "target": "",
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-test/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Settings",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "BPDA",
          "BPD",
          "BFD",
          "CH",
        ],
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "BPDA",
          "CH",
          "ASSESSING",
          "BPL",
        ],
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": Array [
          "SG_AB_BLDGMAINTREQ",
        ],
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": Array [
          "BPHC",
        ],
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Fleet Hub",
        "url": "https://beacon.boston.gov/cob?id=kb_article&sysparm_article=KB0010114",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns just the "everyone" category for no groups 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/lighthouse_basic_icon.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Beacon",
        "url": "https://test-beacon.boston.gov/cob",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/city_workforce_emergency_alerts.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Workforce Alerts",
        "url": "https://alertbostontraining.genasys.com/saml2/authenticate/abtraining",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/talented.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "BPS Job Listings",
        "url": "https://bostonpublicschools.tedk12.com/hire/index.aspx",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/boston-maps.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Boston Maps",
        "url": "https://boston.maps.arcgis.com/",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Update Chosen Name",
        "url": "/preferred-chosen-name",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Change My Password",
        "url": "/change-password",
      },
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "target": "",
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-test/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Settings",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": Array [
          "BPDA",
          "BPD",
          "BFD",
          "CH",
        ],
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "International Travel",
        "url": "https://goo.gl/forms/Xobh9aZeGXSnKH2m2",
      },
      Object {
        "agencies": Array [
          "BPDA",
          "CH",
          "ASSESSING",
          "BPL",
        ],
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": Array [
          "SG_AB_BLDGMAINTREQ",
        ],
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Building Maintenance",
        "url": "https://eamtst.cityhall.boston.cob:5443/WebMaint/",
      },
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": Array [
          "BPHC",
        ],
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Fleet Hub",
        "url": "https://beacon.boston.gov/cob?id=kb_article&sysparm_article=KB0010114",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Forms / Links",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": false,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Group Management",
        "url": "/group-management",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Support Tools",
  },
]
`;

exports[`appsForUserTypeAndGroups returns only birthright apps for onboarding users 1`] = `
Array [
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": "https://assets.boston.gov/icons/accessboston/lighthouse_basic_icon.svg",
        "mfaDeviceRequired": false,
        "target": "",
        "title": "Beacon",
        "url": "https://test-beacon.boston.gov/cob",
      },
    ],
    "icons": true,
    "showRequestAccessLink": false,
    "title": "Applications",
  },
  Object {
    "apps": Array [
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": false,
        "target": "_blank",
        "title": "Update Chosen Name",
        "url": "/preferred-chosen-name",
      },
      Object {
        "agencies": null,
        "birthright": true,
        "description": "",
        "exclusions": null,
        "groups": null,
        "iconUrl": null,
        "mfaDeviceRequired": true,
        "target": "",
        "title": "Manage My Device(s)",
        "url": "https://desktop.pingone.com/boston-test/Selection?cmd=devices",
      },
    ],
    "icons": false,
    "showRequestAccessLink": false,
    "title": "Account Settings",
  },
]
`;
